# github_actions_test

./: main.py  pyproject.toml  sum_array.py  version.yaml
.github/workflows/: create_release_draft.yml  publish_release.yml  python-app.yml
test/: test_sum_array.py
